--- a/Aries/Aries.vcxproj.filters
+++ b/Aries/Aries.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClInclude Include="hdr\RenderPass.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="hdr\PassMetadata.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\DeviceResources.cpp">
