added proper position transformation for rendering to a reflection texture

--- a/Aries/Aries.vcxproj.filters
+++ b/Aries/Aries.vcxproj.filters
@@ -169,5 +169,8 @@
     <FxCompile Include="..\shaders\DepthToTexture_PS.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="..\shaders\ReflectionToTexture_VS.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
