--- a/Aries/Aries.vcxproj
+++ b/Aries/Aries.vcxproj
@@ -169,11 +169,16 @@
     <ClInclude Include="hdr\dx12\DX12DescriptorHeap.h" />
     <ClInclude Include="hdr\dx12\DX12Factory.h" />
     <ClInclude Include="hdr\dx12\DX12SurfacePolicy.h" />
+    <ClInclude Include="hdr\dx12\DX12PSO.h" />
+    <ClInclude Include="hdr\dx12\DX12ResourceBindings.h" />
     <ClInclude Include="hdr\Error.h" />
+    <ClInclude Include="hdr\GAPIFactoryProxy.h" />
     <ClInclude Include="hdr\ForwardRenderer.h" />
     <ClInclude Include="hdr\IContextBinding.h" />
     <ClInclude Include="hdr\IGAPIFactory.h" />
+    <ClInclude Include="hdr\IGAPIFactoryInternal.h" />
     <ClInclude Include="hdr\IPipelineState.h" />
+    <ClInclude Include="hdr\IResourceBindings.h" />
     <ClInclude Include="hdr\ISurfacePolicy.h" />
     <ClInclude Include="hdr\IWindow.h" />
     <ClInclude Include="hdr\PassMetadata.h" />
@@ -208,8 +213,11 @@
     <ClCompile Include="src\dx11\DX11PipelineState.cpp" />
     <ClCompile Include="src\dx12\DX12DescriptorHeap.cpp" />
     <ClCompile Include="src\dx12\DX12Factory.cpp" />
+    <ClCompile Include="src\dx12\DX12PSO.cpp" />
+    <ClCompile Include="src\dx12\DX12ResourceBindings.cpp" />
     <ClCompile Include="src\dx12\DX12SurfacePolicy.cpp" />
     <ClCompile Include="src\ForwardRenderer.cpp" />
+    <ClCompile Include="src\GAPIFactoryProxy.cpp" />
     <ClCompile Include="src\ObjMesh.cpp" />
     <ClCompile Include="src\PixelBase.cpp" />
     <ClCompile Include="src\PixelSingleLightShadow.cpp" />
