--- a/Aries/Aries.vcxproj
+++ b/Aries/Aries.vcxproj
@@ -159,75 +159,38 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="hdr\Actor.h" />
-    <ClInclude Include="hdr\DepthBuffer.h" />
-    <ClInclude Include="hdr\DeviceResources.h" />
-    <ClInclude Include="hdr\DX11Texture3D.h" />
-    <ClInclude Include="hdr\dx11\DX11ConstantBuffer.h" />
-    <ClInclude Include="hdr\dx11\DX11Factory.h" />
-    <ClInclude Include="hdr\dx11\DX11PipelineState.h" />
     <ClInclude Include="hdr\dx12\DX12DescriptorHeap.h" />
     <ClInclude Include="hdr\dx12\DX12Factory.h" />
+    <ClInclude Include="hdr\dx12\DX12Heap.h" />
     <ClInclude Include="hdr\dx12\DX12ResourceTable.h" />
     <ClInclude Include="hdr\dx12\DX12SurfacePolicy.h" />
     <ClInclude Include="hdr\dx12\DX12PSO.h" />
     <ClInclude Include="hdr\dx12\DX12ResourceBindings.h" />
     <ClInclude Include="hdr\EnumFlags.h" />
     <ClInclude Include="hdr\Error.h" />
-    <ClInclude Include="hdr\GAPIFactoryProxy.h" />
-    <ClInclude Include="hdr\ForwardRenderer.h" />
+    <ClInclude Include="hdr\GAPIMisc.h" />
     <ClInclude Include="hdr\GAPITypes.h" />
-    <ClInclude Include="hdr\IContextBinding.h" />
     <ClInclude Include="hdr\IGAPIFactory.h" />
-    <ClInclude Include="hdr\IGAPIFactoryInternal.h" />
+    <ClInclude Include="hdr\IHeap.h" />
     <ClInclude Include="hdr\IPipelineState.h" />
     <ClInclude Include="hdr\IResourceBindings.h" />
     <ClInclude Include="hdr\ISurfacePolicy.h" />
     <ClInclude Include="hdr\IWindow.h" />
-    <ClInclude Include="hdr\PassMetadata.h" />
-    <ClInclude Include="hdr\PixelBase.h" />
-    <ClInclude Include="hdr\IMesh.h" />
     <ClInclude Include="hdr\Light.h" />
-    <ClInclude Include="hdr\ObjMesh.h" />
-    <ClInclude Include="hdr\ObjSyntaxHandler.h" />
-    <ClInclude Include="hdr\PixelSingleLightShadow.h" />
-    <ClInclude Include="hdr\PixelToTexture.h" />
-    <ClInclude Include="hdr\RenderPass.h" />
-    <ClInclude Include="hdr\SceneGraph.h" />
-    <ClInclude Include="hdr\ShaderBase.h" />
     <ClInclude Include="hdr\ModulePath.h" />
-    <ClInclude Include="hdr\ShaderCluster.h" />
-    <ClInclude Include="hdr\TextureTarget2D.h" />
-    <ClInclude Include="hdr\VertexBase.h" />
-    <ClInclude Include="hdr\VertexSingleLightShadow.h" />
     <ClInclude Include="hdr\WinWindow.h" />
     <ClInclude Include="objloader\hdr\ObjLexer.h" />
     <ClInclude Include="objloader\hdr\ObjLoader.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="hdr\IActor.h" />
     <ClCompile Include="objloader\src\ObjLexer.cpp" />
     <ClCompile Include="objloader\src\ObjLoader.cpp" />
-    <ClCompile Include="src\Actor.cpp" />
     <ClCompile Include="src\Aries.cpp" />
-    <ClCompile Include="src\DepthBuffer.cpp" />
-    <ClCompile Include="src\DeviceResources.cpp" />
-    <ClCompile Include="src\dx11\DX11Factory.cpp" />
-    <ClCompile Include="src\dx11\DX11PipelineState.cpp" />
     <ClCompile Include="src\dx12\DX12DescriptorHeap.cpp" />
     <ClCompile Include="src\dx12\DX12Factory.cpp" />
     <ClCompile Include="src\dx12\DX12PSO.cpp" />
     <ClCompile Include="src\dx12\DX12ResourceBindings.cpp" />
     <ClCompile Include="src\dx12\DX12SurfacePolicy.cpp" />
-    <ClCompile Include="src\ForwardRenderer.cpp" />
-    <ClCompile Include="src\GAPIFactoryProxy.cpp" />
-    <ClCompile Include="src\ObjMesh.cpp" />
-    <ClCompile Include="src\PixelBase.cpp" />
-    <ClCompile Include="src\PixelSingleLightShadow.cpp" />
-    <ClCompile Include="src\PixelToTexture.cpp" />
-    <ClCompile Include="src\TextureTarget2D.cpp" />
-    <ClCompile Include="src\VertexBase.cpp" />
-    <ClCompile Include="src\VertexSingleLightShadow.cpp" />
     <ClCompile Include="src\WinWindow.cpp" />
   </ItemGroup>
   <ItemGroup>
