reserved buffer/resource implementations, ring heap started

--- a/modules/rhi/rhi.vcxproj
+++ b/modules/rhi/rhi.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClInclude Include="hdr\client\IGAPIFactory.h" />
     <ClInclude Include="hdr\client\IHeap.h" />
+    <ClInclude Include="hdr\client\IReservedBuffer.h" />
     <ClInclude Include="hdr\client\IWindow.h" />
     <ClInclude Include="hdr\client\LinkageMacro.h" />
     <ClInclude Include="hdr\client\Rhi.h" />
@@ -28,6 +29,7 @@
     <ClInclude Include="hdr\dx12\DX12Factory.h" />
     <ClInclude Include="hdr\dx12\DX12Heap.h" />
     <ClInclude Include="hdr\dx12\DX12PSO.h" />
+    <ClInclude Include="hdr\dx12\DX12ReservedBuffer.h" />
     <ClInclude Include="hdr\dx12\DX12ResourceBindings.h" />
     <ClInclude Include="hdr\dx12\DX12ResourceTable.h" />
     <ClInclude Include="hdr\dx12\DX12SurfacePolicy.h" />
@@ -36,6 +38,7 @@
     <ClInclude Include="hdr\IPipelineState.h" />
     <ClInclude Include="hdr\IResourceBindings.h" />
     <ClInclude Include="hdr\ISurfacePolicy.h" />
+    <ClInclude Include="hdr\RingHeap.h" />
     <ClInclude Include="hdr\targetver.h" />
     <ClInclude Include="hdr\win\WinWindow.h" />
   </ItemGroup>
@@ -44,6 +47,7 @@
     <ClCompile Include="src\dx12\DX12DescriptorHeap.cpp" />
     <ClCompile Include="src\dx12\DX12Factory.cpp" />
     <ClCompile Include="src\dx12\DX12PSO.cpp" />
+    <ClCompile Include="src\dx12\DX12ReservedBuffer.cpp" />
     <ClCompile Include="src\dx12\DX12ResourceBindings.cpp" />
     <ClCompile Include="src\dx12\DX12SurfacePolicy.cpp" />
     <ClCompile Include="src\Rhi.cpp" />
