dx12 unabstracted implementations

--- a/modules/rhi/rhi.vcxproj
+++ b/modules/rhi/rhi.vcxproj
@@ -23,15 +23,19 @@
     <ClInclude Include="hdr\client\ICmdQueue.h" />
     <ClInclude Include="hdr\client\IFence.h" />
     <ClInclude Include="hdr\client\IGAPIFactory.h" />
+    <ClInclude Include="hdr\client\IGAPIResource.h" />
     <ClInclude Include="hdr\client\IHeap.h" />
     <ClInclude Include="hdr\client\IReservedBuffer.h" />
     <ClInclude Include="hdr\client\IWindow.h" />
     <ClInclude Include="hdr\client\LinkageMacro.h" />
     <ClInclude Include="hdr\client\Rhi.h" />
+    <ClInclude Include="hdr\dx12\DX12CmdAllocator.h" />
+    <ClInclude Include="hdr\dx12\DX12CmdList.h" />
     <ClInclude Include="hdr\dx12\DX12DescriptorHeap.h" />
     <ClInclude Include="hdr\dx12\DX12Factory.h" />
     <ClInclude Include="hdr\dx12\DX12Fence.h" />
     <ClInclude Include="hdr\dx12\DX12Heap.h" />
+    <ClInclude Include="hdr\dx12\DX12PlacedResource.h" />
     <ClInclude Include="hdr\dx12\DX12PSO.h" />
     <ClInclude Include="hdr\dx12\DX12ReservedBuffer.h" />
     <ClInclude Include="hdr\dx12\DX12ResourceBindings.h" />
